# cpuid-rs

./: .rustfmt.toml  COPYING  COPYING.asc  Cargo.toml  GNUmakefile  LICENSE  LICENSE.asc  README.md  cpuid-rs.code-workspace
.github/workflows/: rust.yml
resources/test/dumps/AuthenticAMD/: AuthenticAMD0000500_K5_CPUID.txt  AuthenticAMD0000501_K5_CPUID.txt  AuthenticAMD0000511_K5_CPUID.txt  AuthenticAMD0000514_K5_CPUID.txt  AuthenticAMD0000524_K5_CPUID.txt  AuthenticAMD0000534_K5_CPUID.txt  AuthenticAMD0000562_K6_CPUID.txt  AuthenticAMD0000570_K6_CPUID.txt  AuthenticAMD0000580_K6_Chomper_CPUID.txt  AuthenticAMD000058C_K6_ChomperExt_CPUID.txt  AuthenticAMD0000591_K6_Sharptooth_CPUID.txt  AuthenticAMD00005A2_GeodeLX_CPUID.txt  AuthenticAMD00005D0_K63Plus_CPUID.txt  AuthenticAMD00005D4_K62Plus_CPUID.txt  AuthenticAMD0000612_K7_Argon_CPUID.txt  AuthenticAMD0000622_K7_Pluto_CPUID.txt  AuthenticAMD0000630_K7_Spitfire_CPUID.txt  AuthenticAMD0000644_K7_Thunderbird_CPUID.txt  AuthenticAMD0000662_K7_Palomino_CPUID.txt  AuthenticAMD0000670_K7_Morgan_CPUID.txt  AuthenticAMD0000680_K7_Thoroughbred_CPUID.txt  AuthenticAMD0000681_K7_Applebred_CPUID.txt  AuthenticAMD00006A0_K7_Barton_CPUID.txt  AuthenticAMD0000F4A_K8_Clawhammer_CPUID.txt  AuthenticAMD0000F51_K8_Sledgehammer_CPUID.txt  AuthenticAMD0000F5A_K8_Sledgehammer_CPUID.txt  AuthenticAMD0010FC0_K8_Winchester_CPUID.txt  AuthenticAMD0010FF0_K8_Palermo_CPUID.txt  AuthenticAMD0020FB1_K8_Manchester_CPUID.txt  AuthenticAMD0020FC2_K8_Palermo_CPUID.txt  AuthenticAMD0020FF0_K8_Venice_CPUID.txt  AuthenticAMD0040F12_K8_SantaRosa_CPUID_S2.txt  AuthenticAMD0040F12_K8_SantaRosa_CPUID_S8.txt  AuthenticAMD0040F33_K8_Windsor_CPUID.txt  AuthenticAMD0050FF3_K8_Orleans_CPUID.txt  AuthenticAMD0060FB1_K8_Brisbane_CPUID.txt  AuthenticAMD0070FF1_K8_Lima_CPUID.txt  AuthenticAMD0100F21_K10_Barcelona_CPUID.txt  AuthenticAMD0100F22_K10_Agena_CPUID.txt  AuthenticAMD0100F22_K10_Agena_CPUID_2.txt  (+91 more)
resources/test/dumps/CentaurHauls/: CentaurHauls0000541_WinChipC6_2_CPUID.txt  CentaurHauls0000541_WinChipC6_CPUID.txt  CentaurHauls0000542_WinChipC6_CPUID.txt  CentaurHauls0000585_WinChipC6Plus_CPUID.txt  CentaurHauls0000587_WinChip2A_CPUID.txt  CentaurHauls000058A_WinChip2B_CPUID.txt  CentaurHauls000058A_WinChipC6Plus_CPUID.txt  CentaurHauls0000660_C5A_Samuel_CPUID.txt  CentaurHauls0000662_C5A_Samuel_CPUID.txt  CentaurHauls0000663_C5A_Samuel_CPUID.txt  CentaurHauls0000673_C5B_Samuel2_CPUID.txt  CentaurHauls0000678_C5C_Ezra_CPUID.txt  CentaurHauls000067A_C5C_Ezra_CPUID.txt  CentaurHauls0000689_C5N_Ezra-T_CPUID.txt  CentaurHauls0000691_C5XL_Nehemiah_CPUID.txt  CentaurHauls0000693_C5XL_Nehemiah_CPUID.txt  (+14 more)
src/: cache.rs  cache_descriptors.rs  cpuid.rs  feature.rs  lib.rs  topology.rs
src/internal/: cache_descriptors.rs  feature_flags.rs  mod.rs
tests/: read_dumps.rs  run_bins.rs
(+250 files in other folders)
