[package]
name = "cpuid"
version = "0.0.0"
authors = ["Steven Noonan <steven@uplinklabs.net>"]
edition = "2018"

[features]
default = ["legacy-cache-descriptors", "build-binaries"]
build-binaries = ["getopts"]
legacy-cache-descriptors = []

[[bin]]
name = "dump"
required-features = ["build-binaries"]

[[bin]]
name = "decode"
required-features = ["build-binaries"]

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1

[dependencies]
modular-bitfield = "^0"
num_cpus = "^1"
affinity = "^0"
log = { version = "^0", features = ["release_max_level_off"] }
env_logger = "^0"
getopts = { version = "^0", optional = true }

[dependencies.scan_fmt]
version = "^0"
default-features = false

[dependencies.textwrap]
version = "^0"
default-features = false
